walletpages and fastag pages

--- a/src/app/fastag/fastagpage1/fastagpage1.page.html
+++ b/src/app/fastag/fastagpage1/fastagpage1.page.html
@@ -6,25 +6,27 @@
           <a routerLink="/paymenthistory">
             <img src="assets/back.png" alt="back_icon2" />
           </a>
-          <span class="Transfer">Bank Name</span>
+          <span class="Transfer">Bank</span>
         </ion-row>
       </ion-card-header>
     </ion-grid>
   </div>
-  <div class="input">
-    <ion-input
-      label="Solid input"
-      class="SubscriberId"
-      class="custom-input-field"
-      labelPlacement="stacked"
-      type="input"
-      placeholder="Custmer ID"
-      fill="solid"
-    >
-    </ion-input>
 
-    <h6 class="inputContent">Please enter 10 Digit valid Custmer ID</h6>
+  <div class="input">
+    <ion-item>
+      <ion-input
+        label="Solid input"
+        class="Vehiclenumber"
+        labelPlacement="stacked"
+        type="input"
+        placeholder="Vehicle Number"
+        fill="solid"
+      >
+      </ion-input>
+    </ion-item>
+    <h6 class="inputContent">Please enter valid vehicle number</h6>
   </div>
+
   <div class="logo">
     <img src="../../../assets/Fastag/page1/DB_LOGO 1.svg" alt="logo" />
 
