--- a/src/app/home2/wallet/tsuccess/tsuccess.page.html
+++ b/src/app/home2/wallet/tsuccess/tsuccess.page.html
@@ -39,5 +39,12 @@
     </ion-col>
   </div>
 
-  <div class="tmore">Transfer more money</div>
+  <ion-button
+    routerLink="/wallet/terror"
+    class="long-btn"
+    shape="round"
+    size="small"
+    (click)="onClick($event)"
+    >Done</ion-button
+  >
 </ion-content>
