--- a/src/app/home2/wallet/wallet.page.scss
+++ b/src/app/home2/wallet/wallet.page.scss
@@ -37,7 +37,7 @@ ion-content {
 
 .card1 {
   position: absolute;
-  margin-top: 22vh;
+  margin-top: 187.5px;
   height: 28vh;
   margin-left: 4vw;
   box-shadow: none;
@@ -48,7 +48,7 @@ ion-content {
 .card3 {
   position: relative;
   box-shadow: none;
-  margin-top: 25.9vh;
+  margin-top: 26vh;
   border-radius: 20px;
 }
 .frwd11 {
