--- a/src/app/home2/wallet/terror/terror.page.scss
+++ b/src/app/home2/wallet/terror/terror.page.scss
@@ -64,6 +64,8 @@ ion-button {
   display: flex;
   position: absolute;
   margin-top: 12px;
+  font-size: 15px;
+  
 }
 .order {
   font-size: 15px;
