--- a/src/app/home2/wallet/wallet.page.html
+++ b/src/app/home2/wallet/wallet.page.html
@@ -82,7 +82,7 @@
 </ion-card>
 
 <ion-card class="card3" lines="none">
-  <ion-list [inset]="true">
+  <ion-list >
     <ion-item href="#">
       <ion-avatar slot="start">
         <div class="cardimage">
