--- a/src/app/home2/wallet/tsuccess/tsuccess.page.scss
+++ b/src/app/home2/wallet/tsuccess/tsuccess.page.scss
@@ -44,14 +44,15 @@ ion-button {
   position: relative;
   top: -30px;
   margin-top: -630px;
-  margin-left: 100px;
+  margin-left: 150px;
+  font-size: 10px;
 
 }
 .tsuccess {
-  font-size: 20px;
-  margin-left: 115px;
-  margin-top: 80px;
-  font-weight: bold;
+  font-size: 23px;
+  margin-left: 105px;
+  margin-top: 5px;
+  font-weight: bolder;
   color: #09376e;
 }
 .successfully {
@@ -60,10 +61,10 @@ ion-button {
   font-size: 12px;
 }
 .successfully1 {
-  padding-left: 50px;
+  padding-left: 35px;
   font-size: 12px;
   margin-top: -15px;
-  margin-left: 130px;
+  margin-left: 120px;
 }
 .ttransfer {
   padding-left: 40px;
@@ -76,7 +77,7 @@ ion-button {
   background-color: white;
   font-weight: bolder;
   text-align: center;
-  font-size: 6vh;
+  font-size: 3vh;
   border-color: #d4d4d4;
   border: none;
   position: relative;
@@ -84,7 +85,6 @@ ion-button {
 
 .inputbox {
   text-align: center;
-  margin-top: 1.9vh;
   padding-left: 40px;
   padding-right: 40px;
   border: none;
@@ -94,10 +94,32 @@ ion-button {
     color: #09376e;
   }
 }
+.transactionID{
+  font-weight: 600;
+  font-size:large;
+  color: black;
+  margin-top: 10vh;
+  margin-left: 15vw;
+}
+.transactionnumber{
+  margin-top: 20px;
+  margin-left: 15vw;
+}
+.amount{
+  margin-left: 65vw;
+  margin-top: -20px;
+  color: black;
+  font-weight: 600;
+}
+.cost{
+  margin-left: 75vw;
+  margin-top: -20px;
+
+}
 ion-button {
   margin-left: 5vw;
   padding-left: 7vw;
-  margin-top: 15px;
+  margin-top: 10vh;
   padding-right: 15vw;
   display: flex;
   position: absolute;
