PayMoney Numeric Keyboard and resolved previous code

--- a/src/app/PayMoney/failedpaymentreciept/failedpaymentreciept.page.scss
+++ b/src/app/PayMoney/failedpaymentreciept/failedpaymentreciept.page.scss
@@ -1,131 +1,135 @@
 .Transfer {
-    margin-left: 30px !important;
-    margin-top: 3.9vh !important;
-    font-family: "Montserrat";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 22px !important;
-    color: white;
-    //   min-height: 100px;
-  }
-  img {
-    margin-top: 3vh !important;
-  }
-  ion-content {
-    --ion-background-color: #09376e;
-  }
-  .pay {
-    position: absolute;
-    right: 0px;
-    z-index: -1;
-  }
-  .payinfo {
-    padding-top: 6vh;
-    margin-left: 6vw;
-  }
-  .successblank {
-    // position: relative;
-    height: -70px;
-    margin-top: -70px;
-    top: -70px;
-  }
-  .part2 {
-    margin-left: 10px;
-  }
-  .part3 {
-    position: relative;
-    top: -30px;
-    margin-top: -630px;
-    margin-left: 140px;
-  }
-  .Oops {
-    font-size: 15px;
-    margin-left: 70px;
-    margin-top: 5px;
-    font-weight: bold;
-  }
-  .error {
-    border: 1px solid black;
-    width: 200px;
-    text-align: justify;
-    margin-left: 90px;
-    font-size: 12px;
-  }
-  .successfully1 {
-    padding-left: 50px;
-    font-size: 12px;
-    margin-top: -15px;
-    margin-left: 130px;
-  }
-  ion-button {
-    margin-left: 19vw;
-    padding-left: 15vw;
-    padding-right: 50vw;
-    display: flex;
-    position: absolute;
-    margin-top: 12px;
-    font-size: 15px;
-    
-  }
-  .order {
-    font-size: 15px;
-    margin-left: 70px;
-    margin-top: 5px;
-    font-weight: bold;
-    margin-top: 90px;
-  }
-  .amount {
-    font-size: 15px;
-    margin-left: 170px;
-    margin-top: 5px;
-    font-weight: bold;
-    margin-top: -18px;
-  }
-  .number {
-    font-size: 15px;
-    margin-left: 70px;
-    margin-top: 5px;
-  }
-  .amountnumber {
-    font-size: 15px;
-    margin-left: 210px;
-    margin-top: 5px;
-    margin-top: -19px;
-  }
-  .safe {
-    font-size: 12px;
-    margin-left: 60px;
-    margin-top: 20px;
-    font-weight: bold;
-  }
-  .firstpara {
-    margin-left: 60px;
-    margin-top: 40px;
-    font-size: small;
-  }
-  .secondpara {
-    margin-left: 70px;
-    margin-top: 10px;
-    font-size: small;
-  }
-  .thirdpara {
-    margin-left: 130px;
-    margin-top: 10px;
-    font-size: small;
-  }
-  .firstpart {
-    margin-left: 90px;
-    margin-top: 5px;
-    font-size: small;
-  }
-  .secondpart {
-    margin-left: 70px;
-    margin-top: 0px;
-    font-size: small;
-  }
-  .thirdpart {
-    margin-left: 180px;
-    margin-top: 0px;
-    font-size: small;
-  }
-  
+  margin-left: 30px !important;
+  margin-top: 3.9vh !important;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 22px !important;
+  color: white;
+  //   min-height: 100px;
+}
+img {
+  margin-top: 3vh !important;
+}
+ion-content {
+  --ion-background-color: #09376e;
+}
+.pay {
+  position: absolute;
+  right: 0px;
+  z-index: -1;
+}
+.payinfo {
+  padding-top: 6vh;
+  margin-left: 6vw;
+}
+.successblank {
+  // position: relative;
+  height: -70px;
+  margin-top: -70px;
+  top: -70px;
+}
+.part2 {
+  margin-left: 10px;
+}
+.part3 {
+  position: relative;
+  top: -30px;
+  margin-top: -630px;
+  margin-left: 140px;
+}
+.Oops {
+  font-size: 15px;
+  margin-left: 70px;
+  margin-top: 5px;
+  font-weight: bold;
+}
+.error {
+  border: 1px solid black;
+  width: 200px;
+  text-align: justify;
+  margin-left: 90px;
+  font-size: 12px;
+}
+.successfully1 {
+  padding-left: 50px;
+  font-size: 12px;
+  margin-top: -15px;
+  margin-left: 130px;
+}
+ion-button {
+  margin-left: 19vw;
+  padding-left: 15vw;
+  padding-right: 50vw;
+  display: flex;
+  position: absolute;
+  margin-top: 12px;
+  font-size: 15px;
+}
+.order {
+  font-size: 15px;
+  margin-left: 70px;
+  margin-top: 5px;
+  font-weight: bold;
+  margin-top: 90px;
+}
+.amount {
+  font-size: 15px;
+  margin-left: 170px;
+  margin-top: 5px;
+  font-weight: bold;
+  margin-top: -18px;
+}
+.number {
+  font-size: 15px;
+  margin-left: 70px;
+  margin-top: 5px;
+}
+.amountnumber {
+  font-size: 15px;
+  margin-left: 210px;
+  margin-top: 5px;
+  margin-top: -19px;
+}
+.safe {
+  font-size: 12px;
+  margin-left: 60px;
+  margin-top: 20px;
+  font-weight: bold;
+}
+.firstpara {
+  margin-left: 60px;
+  margin-top: 40px;
+  font-size: small;
+}
+.secondpara {
+  margin-left: 70px;
+  margin-top: 10px;
+  font-size: small;
+}
+.thirdpara {
+  margin-left: 130px;
+  margin-top: 10px;
+  font-size: small;
+}
+.firstpart {
+  margin-left: 90px;
+  margin-top: 5px;
+  font-size: small;
+}
+.secondpart {
+  margin-left: 70px;
+  margin-top: 0px;
+  font-size: small;
+}
+.thirdpart {
+  margin-left: 180px;
+  margin-top: 0px;
+  font-size: small;
+}
+.btn {
+  color: #09376e;
+  font-weight: 550;
+  margin-top: 3vh;
+  margin-left: 17vw;
+}
