--- a/src/app/WalletToWallet/failedpage/pagenumber1/pagenumber1.page.html
+++ b/src/app/WalletToWallet/failedpage/pagenumber1/pagenumber1.page.html
@@ -54,5 +54,5 @@
     <div class="thirdpara">Within 7 working days.</div>
   </div>
 
-  <ion-button routerLink="/transactionfailedpage" class="btn" size="small" shape="round" fill="outline">View Details</ion-button>
+  <ion-button routerLink="/wallet-to-wallet-failed-page" class="btn" size="small" shape="round" fill="outline">View Details</ion-button>
 </ion-content>
