--- a/src/app/WalletToWallet/success/firstpaymentpage/firstpaymentpage.page.html
+++ b/src/app/WalletToWallet/success/firstpaymentpage/firstpaymentpage.page.html
@@ -47,7 +47,7 @@
     <div class="transactionnumber">11223344556677889911</div>
     <div class="cost">105</div>
   </div>
-  <ion-button routerLink="/firstpayment" class="btn" size="small" shape="round" fill="outline">View Details</ion-button>
+  <ion-button routerLink="/secondpaymentpage" class="btn" size="small" shape="round" fill="outline">View Details</ion-button>
 
   <ion-button
     routerLink="/wallet/terror"
