Worked on Wallet to Wallet and its responsivness

--- a/src/app/PayMoney/paymoney/paymoney.page.html
+++ b/src/app/PayMoney/paymoney/paymoney.page.html
@@ -11,7 +11,7 @@
       </ion-card-header>
     </ion-grid>
   </div>
-
+</ion-content>
   <div class="inputbox">
     <ion-col size="12">
       <input
@@ -24,63 +24,62 @@
   </div>
   <div class="NumericBackground">
     <button (click)="clickThree()" block class="iconbtn">
-      <img src="../../../assets/PayMoney/one.svg" class="btn">
+      <img src="../../../assets/PayMoney/one.svg" class="btn" />
     </button>
 
     <button (click)="clickThree()" block class="iconbtn">
-      <img src="../../../assets/PayMoney/two.svg" class="btn2">
+      <img src="../../../assets/PayMoney/two.svg" class="btn2" />
     </button>
 
     <button (click)="clickThree()" block class="iconbtn">
-      <img src="../../../assets/PayMoney/three.svg" class="btn3">
+      <img src="../../../assets/PayMoney/three.svg" class="btn3" />
     </button>
-    <br>
+    <br />
     <button (click)="clickThree()" block class="iconbtn">
-      <img src="../../../assets/PayMoney/four.svg" class="btn3">
+      <img src="../../../assets/PayMoney/four.svg" class="btn3" />
     </button>
 
     <button (click)="clickThree()" block class="iconbtn">
-      <img src="../../../assets/PayMoney/five.svg" class="btn3">
+      <img src="../../../assets/PayMoney/five.svg" class="btn3" />
     </button>
 
     <button (click)="clickThree()" block class="iconbtn">
-      <img src="../../../assets/PayMoney/six.svg" class="btn3">
+      <img src="../../../assets/PayMoney/six.svg" class="btn3" />
     </button>
-    <br>
+    <br />
     <button (click)="clickThree()" block class="iconbtn">
-      <img src="../../../assets/PayMoney/seven.svg" class="btn3">
+      <img src="../../../assets/PayMoney/seven.svg" class="btn3" />
     </button>
 
     <button (click)="clickThree()" block class="iconbtn">
-      <img src="../../../assets/PayMoney/eight.svg" class="btn3">
+      <img src="../../../assets/PayMoney/eight.svg" class="btn3" />
     </button>
 
     <button (click)="clickThree()" block class="iconbtn">
-      <img src="../../../assets/PayMoney/nine.svg" class="btn3">
+      <img src="../../../assets/PayMoney/nine.svg" class="btn3" />
     </button>
-    <br>
+    <br />
 
     <button (click)="clickThree()" block class="iconbtn">
-      <img src="../../../assets/PayMoney/dot.svg" class="btn3">
-    </button>
-
-    <button (click)="clickThree()" block class="iconbtn">
-      <img src="../../../assets/PayMoney/zero.svg" class="btn3">
+      <img src="../../../assets/PayMoney/dot.svg" class="btn3" />
     </button>
 
     <button (click)="clickThree()" block class="iconbtn">
-      <img src="../../../assets/PayMoney/back.svg" class="btn3">
+      <img src="../../../assets/PayMoney/zero.svg" class="btn3" />
     </button>
-    <br>
+
+    <button (click)="clickThree()" block class="iconbtn">
+      <img src="../../../assets/PayMoney/back.svg" class="btn3" />
+    </button>
+    <br />
 
     <ion-button
-    routerLink="/fastagpage2"
-    class="long-btn"
-    shape="round"
-    size="small"
-    (click)="onClick($event)"
-    >Pay</ion-button
-  >
-
+      routerLink="/fastagpage2"
+      class="long-btn"
+      shape="round"
+      size="small"
+      (click)="onClick($event)"
+      >Pay</ion-button
+    >
   </div>
-</ion-content>
+
